# MOIS

./: .gitignore  pyproject.toml
cw/: __main__.py  api.py  dirs.py  pretrained_model_provider.py  train.py
dataset/: dataset.yml
dataset/labels/all/: 10av.txt  10sch.txt  11tr.txt  12tr.txt  13av.txt  14av.txt  14sch.txt  15av.txt  15sch.txt  16av.txt  16sch.txt  17av.txt  19av.txt  19sch.txt  19tr.txt  1tr.txt  20sch.txt  20tr.txt  21sch.txt  21tr.txt  22tr.txt  23av.txt  23tr.txt  24av.txt  24tr.txt  25av.txt  25tr.txt  26av.txt  26sch.txt  27av.txt  28av.txt  29tr.txt  2av.txt  2tr.txt  30sch.txt  30tr.txt  3av.txt  3sch.txt  3tr.txt  4sch.txt  (+9 more)
dataset/labels/train/: 10tr.txt  11av.txt  12av.txt  12sch.txt  14tr.txt  15tr.txt  16tr.txt  17tr.txt  18av.txt  18sch.txt  1sch.txt  20av.txt  21av.txt  22sch.txt  25sch.txt  26tr.txt  27sch.txt  27tr.txt  28sch.txt  28tr.txt  29av.txt  2sch.txt  3mr.txt  4mr.txt  5av.txt  5tr.txt  6sch.txt  6tr.txt  7mr.txt  8tr.txt
dataset/labels/val/: 11sch.txt  13sch.txt  13tr.txt  17sch.txt  18tr.txt  1av.txt  1mr.txt  22av.txt  23sch.txt  24sch.txt  29sch.txt  2mr.txt  30av.txt  4av.txt  5mr.txt  5sch.txt  6av.txt  9av.txt
static/: index.html
