[tool.poetry]
name = "cw2"
version = "0.1.0"
description = ""
authors = ["Alex Konanau"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.2.23"
platformdirs = "^4.2.2"
wget = "^3.2"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
