[tool.poetry]
name = "cw"
version = "0.1.0"
description = ""
authors = ["Alex Konanau"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.2.23"
platformdirs = "^4.2.2"
wget = "^3.2"
fastapi = "^0.111.0"
from-root = "^1.3.0"

[tool.poetry.scripts]
api = "cw.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
